add stormpath authentication
