# src/main/java/com/jkerak/api/UserCollectionsApiImpl.java
@@ -7,6 +7,7 @@ import io.swagger.annotations.ApiParam;
 import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
 import javax.ws.rs.core.Response;
+import java.net.URI;
 
 public class UserCollectionsApiImpl implements UserCollectionsApi {
 
@@ -21,12 +22,11 @@ public class UserCollectionsApiImpl implements UserCollectionsApi {
     }
 
     public Response ignoreRepository(Long id, Long repositoryId) throws NotFoundException {
-        return null;
+        userCollectionService.ignoreRepository(repositoryId, id);
+        return Response.ok().build();
+
     }
 
-    public Response saveRepository(Long id, Long repositoryId) throws NotFoundException {
-        return null;
-    }
 
     public Response userCollectionsIdGet(Long id) throws NotFoundException {
         UserCollection userCollection = userCollectionService.getUserCollection(id);
